ENT-3899: Support environment deletion in multi-env